[gd_scene load_steps=5 format=3 uid="uid://cwfkgj3v17v05"]

[ext_resource type="Theme" uid="uid://dw7ft4xik3rji" path="res://Assets/Theme/Normal.tres" id="1_k23va"]
[ext_resource type="Script" path="res://Script/UI/SavePanelItem.gd" id="2_ecbb5"]
[ext_resource type="LabelSettings" uid="uid://buvwr4pla8wi1" path="res://Assets/LabelSetting/BigWhite.tres" id="2_kskh0"]
[ext_resource type="Texture2D" uid="uid://cqhj0exwwwxr8" path="res://Assets/Characters/PlayerAssets/Heads/Head.png" id="3_mhggv"]

[node name="SavePanelItem" type="Panel"]
custom_minimum_size = Vector2(0, 364)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme = ExtResource("1_k23va")
script = ExtResource("2_ecbb5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 100

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PlayerImage" type="TextureRect" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
texture = ExtResource("3_mhggv")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayerLevelLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Lv 20"
label_settings = ExtResource("2_kskh0")

[node name="PlayerNameLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "花神"
label_settings = ExtResource("2_kskh0")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 30

[node name="Functions" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20
alignment = 2

[node name="EnterBtn" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/Functions"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "进入"

[node name="DelBtn" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/Functions"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "删除"
